[tool.poetry]
name = "gan_pancakes"
version = "0.1.0"
description = ""
authors = ["Egor Osinkin"]

[tool.poetry.dependencies]
python = "^3.8"
pytorch-lightning = "1.5.4"
timm = "0.4.12"

[tool.poetry.dev-dependencies]
pre-commit = "2.15.0"
pytest = "6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
